--- a/split-pane-layout-demo/res/layout/main.xml
+++ b/split-pane-layout-demo/res/layout/main.xml
@@ -22,11 +22,10 @@
 	xmlns:spl="http://schemas.android.com/apk/res/com.mobidevelop.widget"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-	spl:orientation="horizontal"
+	spl:orientation="vertical"
 	spl:splitterSize="12dip"
 	spl:splitterPosition="33%"
-	spl:splitterBackground="@drawable/splitter_bg_h"
+	spl:splitterBackground="@drawable/splitter_bg_v"
 	>
     <TextView
         android:layout_width="fill_parent"
