--- a/split-pane-layout-demo/res/layout/main.xml
+++ b/split-pane-layout-demo/res/layout/main.xml
@@ -19,7 +19,7 @@
 -->
 <com.mobidevelop.widget.SplitPaneLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:spl="http://schemas.android.com/apk/res/com.mobidevelop.widget"
+	xmlns:spl="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
 	spl:orientation="vertical"
