--- a/split-pane-layout/src/main/res/values/dimens.xml
+++ b/split-pane-layout/src/main/res/values/dimens.xml
@@ -1,3 +1,8 @@
 <resources>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="spl_default_pane_size_min">100dp</dimen>
     <dimen name="spl_default_splitter_size">12dp</dimen>
 </resources>
