--- a/split-pane-layout/src/main/res/values/attrs.xml
+++ b/split-pane-layout/src/main/res/values/attrs.xml
@@ -10,5 +10,8 @@
         <attr name="splitterPosition" format="dimension|fraction" />
         <attr name="splitterBackground" format="reference|color" />
         <attr name="splitterDraggingBackground" format="reference|color" />
+        <attr name="splitterTouchSlop" format="dimension" />
+        <!-- TODO: Also support fraction values-->
+        <attr name="paneSizeMin" format="dimension" />
     </declare-styleable>
 </resources>
