--- a/split-pane-layout-demo/src/main/res/drawable/splitter_bg_v.xml
+++ b/split-pane-layout-demo/src/main/res/drawable/splitter_bg_v.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <gradient
-        android:startColor="#00333333"
-        android:centerColor="#FFE6E6E6"
-        android:endColor="#00333333"
-        android:angle="90" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_focused="true">
+        <shape android:shape="rectangle">
+            <gradient
+                android:startColor="?colorAccent"
+                android:centerColor="?colorAccent"
+                android:endColor="?colorAccent"
+                android:angle="90" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <gradient
+                android:startColor="?colorPrimaryDark"
+                android:centerColor="?colorPrimary"
+                android:endColor="?colorPrimaryDark"
+                android:angle="90" />
+        </shape>
+    </item>
+</selector>
